# model

./: .clippy.toml  .gitignore  Cargo.toml  README.md
src/: event.rs  gateway.rs  internal.rs  invite.rs  lib.rs  misc.rs  permissions.rs  user.rs  utils.rs  webhook.rs
src/channel/: attachment.rs  channel_category.rs  channel_id.rs  embed.rs  group.rs  guild_channel.rs  message.rs  mod.rs  private_channel.rs  reaction.rs
src/guild/: emoji.rs  guild_id.rs  member.rs  mod.rs  partial_guild.rs  role.rs
