[package]
authors = ["alex <acdenissk69@gmail.com>", "Zeyla Hellyer <zey@zey.moe>"]
description = "Serenity ecosystem models, for the Discord API."
documentation = "https://docs.rs/serenity-model"
homepage = "https://github.com/serenity-rs/model"
keywords = ["discord", "serenity"]
license = "ISC"
name = "serenity-model"
readme = "README.md"
repository = "https://github.com/serenity-rs/model.git"
version = "0.1.0"

[dependencies]
bitflags = "^1.0"
chrono = { features = ["serde"], version = "~0.4" }
log = "~0.3"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
serenity-common = { features = ["serde_json"], git = "https://github.com/serenity-rs/common" }
